<resources>
    <string name="app_name">Android_study</string>
    <string name="please_input_key_word">请输入关键字</string>

    <string name="tab_first_page">tab_首页</string>
    <string name="tab_chuzhen_page">tab_出诊</string>
    <string name="tab_circle">tab_圈子</string>
    <string name="tab_message">tab_消息</string>
    <string name="tab_mine">tab_我的</string>

    <string name="dynamic">动态</string>
    <string name="case_lib">病例库</string>
    <string name="video">视频</string>
    <string name="info">资讯</string>

    <!-- 马赛克-->
    <string name="load">选图</string>
    <string name="clear">清除</string>
    <string name="erase">擦除</string>
    <string name="save">保存</string>
    <string name="about">关于</string>
    <string name="finger_mode">模式</string>
    <string name="mode_path">跟随手指</string>
    <string name="mode_grid">方格模式</string>
    <string name="effect">效果</string>
    <string name="effect_grid">方格</string>
    <string name="effect_blur">毛玻璃</string>
    <string name="effect_color">纯色</string>
    <string name="choose_image">选择一张图片</string>

    <string name="case_admire_price_tip">元</string>
    <string name="case_detail_admire_text">赞赏是对主播最大的鼓励</string>
    <string name="case_admire_text">赏</string>
    <string name="case_detail_admire_more_text">打赏过多会使作者骄傲</string>
    <string name="case_detail_anon_admire">匿名打赏</string>

    <array name="categories">
        <item>@array/no_action</item>
        <item>@array/to_accept</item>
        <item>@array/opened</item>
        <item>@array/to_verify</item>
        <item>@array/to_close</item>
    </array>
</resources>
