<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp"
    >

    <LinearLayout
        android:id="@+id/ll_options"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@color/grey_2"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_load"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/option_selector"
            android:text="@string/load"/>

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/option_selector"
            android:text="@string/clear"/>

        <Button
            android:id="@+id/bt_erase"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/option_selector"
            android:text="@string/erase"/>

        <Button
            android:id="@+id/bt_save"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/option_selector"
            android:text="@string/save"/>

    </LinearLayout>

    <me.dawson.promosaic.view.GestureMosaicView
        android:id="@+id/gesture_mv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
