<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_radiu_white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="53dp"
        android:paddingLeft="33dp"
        android:paddingRight="33dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/admire_edit_price"
                    android:layout_width="0dp"
                    android:layout_height="34dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:hint="0.00"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:text="99.99"
                    android:textColor="#f7ca35"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/case_admire_price_tip"
                    android:textColor="#8c8c93"
                    android:textSize="30sp" />
            </LinearLayout>

            <View
                style="@style/item_split_view"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="15dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/admire_tip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/case_detail_admire_text"
            android:textColor="#c3c3c6"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center">

            <TextView
                android:id="@+id/admire_add_img"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_admire_bg"
                android:gravity="center"
                android:text="@string/case_admire_text"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/admire_anony_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="42dp"
            android:layout_marginTop="28dp"
            android:drawableLeft="@drawable/vote_item_normal"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:layout_marginRight="8dp"
            android:text="@string/case_detail_anon_admire"
            android:textColor="#454454"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/admire_cancel_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:padding="10dp"
        android:src="@drawable/ic_home_close" />


</FrameLayout>

